# voxcpm2-inference-server

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-vllm-omni.txt  requirements-voxcpm.txt  requirements.txt
app/: __init__.py  main.py
app/static/: index.html  player.js  styles.css
